# edgehog-device-runtime

./: .gitignore  .gitmodules  Cargo.toml  REUSE.toml  flake.nix
.github/workflows/: check.yaml  common.yaml  e2e-test.yaml  multi-platform.yaml  publish.yaml  test.yaml  vendor.yaml  warmup-caches.yaml
.reuse/templates/: apache-2.jinja2
e2e-test/: Cargo.toml
e2e-test/src/: config.rs  lib.rs  main.rs
edgehog-device-runtime-config/: Cargo.toml  README.md
edgehog-device-runtime-config/src/: lib.rs  utils.rs
edgehog-device-runtime-containers/: Cargo.toml
edgehog-device-runtime-containers/src/: lib.rs  local.rs
edgehog-device-runtime-docker/: Cargo.toml
edgehog-device-runtime-docker/src/: lib.rs  store.rs
edgehog-device-runtime-service/: Cargo.toml
edgehog-device-runtime-store/: Cargo.toml  README.md  containers-diesel.toml  diesel.toml
edgehog-device-runtime-store/assets/: init.sql
edgehog-device-runtime-store/migrations/: migrations.sql
edgehog-device-runtime-store/migrations/containers/: 0001-init.sql
edgehog-device-runtime-store/migrations/containers/2024-11-29-163409_initial/: up.sql
edgehog-device-runtime-store/migrations/containers/2025-08-13-141429_containers-additional-fields/: up.sql
edgehog-device-runtime-store/migrations/containers/2026-03-27-150629-0000_not-null-primary/: down.sql  up.sql
edgehog-device-runtime-store/migrations/runtime/2026-03-11-105826-0000_job-queue/: down.sql  up.sql
edgehog-device-runtime-store/queries/read/: exists_migration.sql
edgehog-device-runtime-store/queries/read/container/: by_id_container.sql
edgehog-device-runtime-store/queries/read/image/: by_id_image.sql
edgehog-device-runtime-store/queries/write/: insert_migration.sql
edgehog-device-runtime-store/queries/write/container/: insert_container.sql  insert_container_missing_image.sql
edgehog-device-runtime-store/queries/write/image/: insert_image.sql  update_container_missing_image.sql
edgehog-device-runtime-store/src/: conversions.rs  db.rs  lib.rs  models.rs  store.rs
edgehog-device-runtime-store/src/db/: migrations.rs  mod.rs  queries.rs
edgehog-device-runtime-store/src/models/: containers.rs  mod.rs
edgehog-device-runtime-store/src/models/containers/: container.rs  deployment.rs  image.rs  network.rs  volume.rs
edgehog-device-runtime-store/src/models/job/: job_type.rs  mod.rs  status.rs
edgehog-device-runtime-store/src/schema/: containers.rs  mod.rs  runtime.rs
edgehogctl/: Cargo.toml  README.md
edgehogctl/src/: containers.rs  lib.rs  main.rs
edgehogctl/src/cli/: containers.rs  mod.rs
edgehogctl/src/file_transfer/: mod.rs
hardware-id-service/: Cargo.toml
hardware-id-service/scripts/: get-hardware-id.sh
hardware-id-service/src/: main.rs
led-manager-service/: Cargo.toml
led-manager-service/scripts/: insert.sh  list.sh  set.sh
led-manager-service/src/: main.rs
nix/: package.nix  shell.nix
scripts/store/: generate.sh  migrate.sh
src/: forwarder.rs  led_behavior.rs  lib.rs  main.rs
src/controller/: actor.rs  message.rs  mod.rs
src/data/: astarte_device_sdk_lib.rs  mod.rs
src/file_transfer/: config.rs  digest.rs  housekeeping.rs  interface.rs  mod.rs
src/http/: mod.rs
src/jobs/: derive.rs  mod.rs  timestamp.rs
src/ota/: mod.rs  ota_handler.rs  ota_handler_test.rs  rauc.rs
src/repository/: file_state_repository.rs
src/storage/: interface.rs  mod.rs
src/telemetry/: hardware_info.rs  mod.rs  net_interfaces.rs  (+6 more)
(+41 files in other folders)
