[package]
name = "edgehog-device-runtime-store"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
displaydoc = { workspace = true }
rusqlite = { workspace = true, features = ["trace", "uuid"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
containers = []
