[package]
name = "edgehogctl"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
aws-lc-rs.workspace = true
clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
edgehog-tls.workspace = true
eyre.workspace = true
hex.workspace = true
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempdir.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }

[dependencies.reqwest]
workspace = true
default-features = false
features = [
  "charset",
  "http2",
  "system-proxy",
  "rustls-no-provider",
  "stream",
  "json",
]
