# This file is part of Edgehog.
#
# Copyright 2022 SECO Mind Srl
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "hardware-id-service"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
env_logger = { workspace = true }
procfs = { workspace = true }
stable-eyre = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "fs"] }
uuid = { workspace = true, features = ["v5", "v4"] }
zbus = { workspace = true, default-features = false, features = ["tokio"] }
